workshop overview workshop details blog overview

--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -1,18 +1,14 @@
 ---
 layout: base
+hide_hero: true
 ---
-<div class="beneath-sections jumbotron fond__white">
-</div>
-
-
 <div class="beneath-sections jumbotron fond__white">
     <div class="row">
         <div class="col-lg-6 col-lg-offset-3 blog-main" >
-				
 				{% include post.html %}
-
-				<a href="/blog" class="btn btn-start">Zurück zum Blog </a>
-			</div>
-		</div>
+        <div class="btn-wrap">
+            <a href="/blog" class="btn btn-start">Zurück zum Blog </a>
+        </div>
+        </div>
 	</div>
 </div>
