--- a/_sass/_hero.scss
+++ b/_sass/_hero.scss
@@ -1,7 +1,7 @@
 .hero-wrap {
   height: 320px;
   position: relative;
-  background: url("/static/img/illustration_vorab_dl.png") no-repeat center;;
+  background: url("/static/img/illustration_vorab_dl.png") no-repeat center;
   background-attachment: fixed;
   background-size: 100%;
   background-position-y: 160px;
