--- a/_includes/post.html
+++ b/_includes/post.html
@@ -1,7 +1,7 @@
 <div class="container">
 	<div class="row">
 		<div class="col-lg-12">
-			<h1 class="section-headline"><a href="{{ page.url }}">{{ page.title }}</a></h1>
+			<h1 class="section-headline">{{ page.title }}</h1>
 		</div>
 	</div>
 	<div class="row">
