--- a/_includes/workshop-teaser-tile.html
+++ b/_includes/workshop-teaser-tile.html
@@ -1,24 +1,16 @@
-<div class="col-xs-12 col-md-6 post-teaser">
-    <div class="post-teaser-inner">
-        {% if post.images %}
-            <a href="{{post.url}}">
-                <div class="post-teaser-image" style="background-image: url(/assets/blog/{{ post.images[0].imgname }});"></div>
-            </a>
-            {% if post.images[0].sub %}<span class="post-teaser-image-caption">
-                    {{ post.images[0].sub }}</span>
-            {% endif %}
-        {% endif %}
-        <div class="post-teaser-content">
-            <h3 class="post-teaser-title" >{{ post.title }}</h3>
-            <div class="post-teaser-description">
-                <p>
-                    {{ post.excerpt | remove: '<p>' | remove: '</p>'}}
-                </p>
-                <a class="post-teaser-read-more" href="{{post.url}}">zum ganzen Eintrag</a>
-            </div>
+<div class="post-teaser-inner">
+    <a href="{{post.link}}">
+        <img src="{{post.img}}" class="img-responsive" />
+    </a>
+    <div class="post-teaser-content workshop">
+        <h3 class="post-teaser-title" >{{ post.title }}</h3>
+        <div class="post-teaser-description workshop">
+            <p>
+                {{ post.ws_teaser | remove: '<p>' | remove: '</p>'}}
+            </p>
+            <a class="post-teaser-read-more" href="{{post.link}}">zum Workshop</a>
         </div>
     </div>
 </div>
-
 
 
