--- a/_layouts/base.html
+++ b/_layouts/base.html
@@ -21,7 +21,6 @@
 
 	<meta name="description" content="{{ page.excerpt | strip_html }}">
     <meta name="viewport" content="width=device-width, user-scalable=no">
-
 	{% include head-social-og.html %}
 	<link rel="stylesheet" href="/static/fonts/overpass/overpass.css">
 	<link rel="stylesheet" href="/static/css/bootstrap.css">
@@ -41,48 +40,38 @@
 
 <div class="body-wrap">
 	<div class="page-wrap">
+        {% include header-nav.liquid %}
         <div class="row">
-            <div class="col-xs-12">
-                <div class="mobile-menu-toggle"><span></span></div>
-                <div class="nav-wrap gone">{% include navigation.html %}</div>
-                <div class="navbar">
-                    <a class="" href="/">
-                        <div class="logo">
-                            <img class="img-responsive" src="/static/img/logo_bold.svg" width="120" alt="Demokratielabore">
-                        </div>
-                    </a>
-                </div>
-            </div>
-        </div>
-        <div class="row">
-            <div class="hero-wrap"></div>
-            {% if site.data.events  %}
-            <div class="events-wrap container">
-                <div class="events-panel">
-                    <div class="events-panel-inner">
-                        <h3 class="events-headline">Kommende Events</h3>
-                        <ul class="events-list">
-                            {% for event in site.data.events %}
-                            {% if event.url %}
-                            <a href="{{event.url}}" target="_blank">
-                                {% endif %}
-                            <li class="events-item">
-
-                                <div class="event-date">
-                                    {{ event.date }}
-                                </div>
-                                <div class="event-info">
-                                    {{ event.name }},<br/>{{ event.city }}
-                                </div>
-                            </li>
+            {% if page.hide_hero != true %}
+                <div class="hero-wrap"></div>
+                {% if site.data.events  %}
+                <div class="events-wrap container">
+                    <div class="events-panel">
+                        <div class="events-panel-inner">
+                            <h3 class="events-headline">Kommende Events</h3>
+                            <ul class="events-list">
+                                {% for event in site.data.events %}
                                 {% if event.url %}
-                            </a>
-                            {% endif %}
-                            {% endfor %}
-                        </ul>
+                                <a href="{{event.url}}" target="_blank">
+                                    {% endif %}
+                                    <li class="events-item">
+
+                                        <div class="event-date">
+                                            {{ event.date }}
+                                        </div>
+                                        <div class="event-info">
+                                            {{ event.name }},<br/>{{ event.city }}
+                                        </div>
+                                    </li>
+                                    {% if event.url %}
+                                </a>
+                                {% endif %}
+                                {% endfor %}
+                            </ul>
+                        </div>
                     </div>
                 </div>
-            </div>
+                {% endif %}
             {% endif %}
             <div class="content-wrap col-xs-12">
                 {{ content }}
@@ -149,9 +138,12 @@
 
     <script src="/static/js/vendor/modernizr-2.8.3-respond-1.4.2.min.js"></script>
     <script src="/static/js/vendor/jquery-1.11.2.min.js"></script>
+    <script src="/static/js/vendor/imagesloaded.pkgd.min.js"></script>
+    <script src="/static/js/vendor/isotope.pkgd.min.js"></script>
     <script src="/static/js/vendor/bootstrap.min.js"></script>
     <script src="/static/js/vendor/logger.min.js"></script>
     <script src="/static/js/main.js"></script>
+    <script src="/static/js/IsotopeController.js"></script>
 
     <script>
         jQuery(document).ready(function($) {
