--- a/_layouts/blog.html
+++ b/_layouts/blog.html
@@ -1,43 +1,32 @@
 ---
 layout: base
+title: "Blog"
+hide_hero: true
 ---
-
-<!-- Blog -->
-<div class="beneath-sections jumbotron fond__white">
-</div>
-
-<div class="beneath-sections jumbotron fond__white">
-    <div class="col-lg-8 col-lg-offset-2 title">
-        <div class="container text-center text__black">
-            <h1 class="section-headline">Neues, News und Neuigkeiten</h1>
+<div class="row">
+    <div class="col-xs-12 fond__grey-mid jumbotron">
+        <div class="row">
+            <div class="container">
+                <div class="col-lg-10 col-lg-offset-1 section-workshop">
+                    <h2 class="section-headline">Neues, News und Neuigkeiten</h2>
+                </div>
+            </div>
+            <div class="container wide">
+                <div class="isotope-wrap">
+                    <div class="grid-sizer col-xs-12 col-md-6 col-lg-4"></div>
+                    {% for post in site.posts %}
+                    <div class="col-xs-12 col-md-6 col-lg-4 isotope-item post-teaser">
+                        {% include post-teaser-tile.html post=post %}
+                    </div>
+                    {% endfor %}
+                </div>
+            </div>
+        </div>
+        <div class="btn-wrap">
+            <a href="/feed.xml" target="_blank" class="btn btn-start color-2">RSS Feed</a>
         </div>
     </div>
 </div>
 
-<div class="beneath-sections jumbotron fond__white">
-    <div class="row">
-        <div class="col-lg-6 col-lg-offset-3 blog-main" >
-            {{ content }}
-        </div> 
-    </div>
-
-<div class="rss-feed col-lg-2">
-    <h3><a href="/feed.xml">RSS Feed</a></h3>
-</div>
 
 </div>
-<script src="/static/js/jquery.infinitescroll.min.js"></script>
-
-
-<script type="text/javascript">
-$(document).ready(function() {
-
-    $('.blog-page-nav').css('display','none');
-
-    $('.blog-main').infinitescroll({
-        navSelector  : ".blog-page-nav",
-        nextSelector : ".blog-page-nav .older",
-        itemSelector : ".blog-main .blog-post-teaser",
-        });
-    });
-</script>
