--- a/_layouts/workshop-detail.html
+++ b/_layouts/workshop-detail.html
@@ -43,7 +43,7 @@
         {% include header-nav.liquid %}
         <div class="row">
             {% if page.hide_hero != true %}
-                <div class="hero-wrap"></div>
+                <div class="hero-wrap" style="background-image:url({{ page.img_full }});"></div>
                 {% if site.data.events  %}
                 <div class="events-wrap container">
                     <div class="events-panel">
@@ -73,9 +73,46 @@
                 </div>
                 {% endif %}
             {% endif %}
-            <div class="content-wrap col-xs-12">
-                {{ content }}
+        </div>
+        <div class="beneath-sections jumbotron fond__white">
+            <div class="container">
+                <div class="row">
+                    <div class="col-lg-10 col-lg-offset-1 section-intro">
+                        <h2 class="section-headline">{{ page.title }}</h2>
+                        <p>{{ page.ws_teaser }}</p>
+                    </div>
+                </div>
             </div>
+            {% if page.voraussetzungen|length > 0 %}
+                <div class="row">
+                    <div class="container text__black vs-background-wrap">
+                        <div class="col-md-10 col-md-offset-1 col-lg-8 col-lg-offset-2 vs-background">
+                            {% for vs in page.voraussetzungen %}
+                            <p>{{ vs.text }}</p>
+                            {% endfor %}
+                        </div>
+                    </div>
+                </div>
+            {% endif %}
+                <div class="row">
+                    <div class="container text__black">
+                        <div class="col-lg-8 col-lg-offset-2">
+                            {{ content }}
+                        </div>
+                    </div>
+                </div>
+            {% if page.downloads|length > 0 %}
+                <div class="row">
+                    <div class="container text__black">
+                        <div class="col-lg-8 col-lg-offset-2">
+                            <h3>Downloads</h3>
+                            {% for dwl in page.downloads %}
+                            <a href="{{ dwl.file }}" class="btn-download" target="_blank"><span>{{ dwl.name }}</span></a>
+                            {% endfor %}
+                        </div>
+                    </div>
+                </div>
+            {% endif %}
         </div>
 	</div>
 
