--- a/_layouts/workshop-detail.html
+++ b/_layouts/workshop-detail.html
@@ -83,7 +83,7 @@
                     </div>
                 </div>
             </div>
-            {% if page.voraussetzungen|length > 0 %}
+            {% if page.voraussetzungen.length > 0 %}
                 <div class="row">
                     <div class="container text__black vs-background-wrap">
                         <div class="col-md-10 col-md-offset-1 col-lg-8 col-lg-offset-2 vs-background">
@@ -101,7 +101,7 @@
                         </div>
                     </div>
                 </div>
-            {% if page.downloads|length > 0 %}
+            {% if page.downloads.length > 0 %}
                 <div class="row">
                     <div class="container text__black">
                         <div class="col-lg-8 col-lg-offset-2">
