--- a/_layouts/blog.html
+++ b/_layouts/blog.html
@@ -4,7 +4,7 @@ title: "Blog"
 hide_hero: true
 ---
 <div class="row">
-    <div class="col-xs-12 fond__grey-mid jumbotron">
+    <div class="col-xs-12 fond__white jumbotron">
         <div class="row">
             <div class="container">
                 <div class="col-lg-10 col-lg-offset-1 section-workshop">
@@ -22,11 +22,5 @@ hide_hero: true
                 </div>
             </div>
         </div>
-        <div class="btn-wrap">
-            <a href="/feed.xml" target="_blank" class="btn btn-start color-2">RSS Feed</a>
-        </div>
     </div>
-</div>
-
-
 </div>
