--- a/_layouts/base.html
+++ b/_layouts/base.html
@@ -44,84 +44,71 @@
         <div class="row">
             {% if page.hide_hero != true %}
                 <div class="hero-wrap"></div>
-                {% if site.data.events  %}
-                <div class="events-wrap container">
-                    <div class="events-panel">
-                        <div class="events-panel-inner">
-                            <h3 class="events-headline">Kommende Events</h3>
-                            <ul class="events-list">
-                                {% for event in site.data.events %}
-                                {% if event.url %}
-                                <a href="{{event.url}}" target="_blank">
-                                    {% endif %}
-                                    <li class="events-item">
+                    {% if site.data.events  %}
+                        <div class="events-wrap container">
+                            <div class="events-panel">
+                                <div class="events-panel-inner">
+                                    <h3 class="events-headline">Kommende Events</h3>
+                                    <ul class="events-list">
+                                        {% for event in site.data.events %}
+                                        {% if event.url %}
+                                        <a href="{{event.url}}" target="_blank">
+                                            {% endif %}
+                                            <li class="events-item">
 
-                                        <div class="event-date">
-                                            {{ event.date }}
-                                        </div>
-                                        <div class="event-info">
-                                            {{ event.name }},<br/>{{ event.city }}
-                                        </div>
-                                    </li>
-                                    {% if event.url %}
-                                </a>
-                                {% endif %}
-                                {% endfor %}
-                            </ul>
+                                                <div class="event-date">
+                                                    {{ event.date }}
+                                                </div>
+                                                <div class="event-info">
+                                                    {{ event.name }},<br/>{{ event.city }}
+                                                </div>
+                                            </li>
+                                            {% if event.url %}
+                                        </a>
+                                        {% endif %}
+                                        {% endfor %}
+                                    </ul>
+                                </div>
+                            </div>
                         </div>
-                    </div>
+                    {% endif %}
                 </div>
-                {% endif %}
             {% endif %}
             <div class="content-wrap col-xs-12">
                 {{ content }}
             </div>
         </div>
 	</div>
-
 </div>
 
-
 <footer>
-	<div class="beneath-sections jumbotron fond_darkblue_gradient">
-		<div class="container text__blue-bright footer">
-        <div class="col-lg-12 text-center">
-				<h2 class="section-headline"> Du hast Fragen? Du erreichst uns</h2>
-				<p>	
-					per Mail: <a class="text__white" href="mailto:info@demokratielabore.de">info@demokratielabore.de</a> <br/>
-					per Telefon: <a class="text__white" href="tel:+4930577036660">+49 (0)30 577 036 660</a><br/>
-					vor Ort: Singerstraße 109, 10179 Berlin<br><br>
-					oder hier: <a class="text__white" href="https://facebook.com/demokratielabs">Facebook</a> 
-					<a class="text__white" href="https://twitter.com/demokratielabs">Twitter</a>
-					<a class="text__white" href="https://instagram.com/demokratielabs">Instagram</a>
-					<br><br>
-				</p>
-			</div>	
-		</div>
-	</div>
 	<div class="jumbotron fond__white partner">
-		<div class="container partner-container">
+		<div class="container">
 			<div class="row">
-				<div class="col-xs-12">
+                <div class="col-lg-12">
 					<h3>Ein Projekt von</h3>
-				</div>
-				<div class="col-sm-4">
-					<a href="http://www.okfn.de/">
-						<img class="img-responsive logo-okf" src="/static/img/OKFN.png" alt="OKFN Logo"/>
-					</a>
-				</div>
-				<div class="col-sm-4">
-					<a href="http://bmfsfj.de/">
-						<img class="img-responsive logo-bmfsfj" src="/static/img/BMFSFJ.png" alt="BMFSFJ" />
-					</a>
-				</div>
-				<div class="col-sm-4">
-					<a href="https://www.demokratie-leben.de">
-						<img class="img-responsive logo-bmfsfj" src="/static/img/foerderzusatz.png" alt="Demokratie leben" />
-					</a>
-				</div>
-				</div>
-			</div>
+    				<div class="col-lg-3">
+    					<a href="http://www.okfn.de/">
+    						<img class="img-responsive logo-okf" src="/static/img/OKFN.png" alt="OKFN Logo"/>
+    					</a>
+    				</div>
+    				<div class="col-lg-3">
+    					<a href="http://bmfsfj.de/">
+    						<img class="img-responsive logo-bmfsfj" src="/static/img/BMFSFJ.png" alt="BMFSFJ" />
+    					</a>
+    				</div>
+    				<div class="col-lg-3">
+    					<a href="https://www.demokratie-leben.de">
+    						<img class="img-responsive logo-bmfsfj" src="/static/img/foerderzusatz.png" alt="Demokratie leben" />
+    					</a>
+    				</div>
+                    <div class="col-lg-3">
+                        <a href="https://bpb.de">
+                            <img class="img-responsive logo-bmfsfj" src="/static/img/bpb.svg" alt="BPB" />
+                        </a>
+                    </div>
+    			</div>
+            </div>
 	 	</div>
 	</div>
 	<div class="jumbotron fond__grey meta-links-foot">
