--- a/_layouts/base.html
+++ b/_layouts/base.html
@@ -87,22 +87,22 @@
 			<div class="row">
                 <div class="col-lg-12">
 					<h3>Ein Projekt von</h3>
-    				<div class="col-lg-3">
+    				<div class="col-md-3 col-xs-6">
     					<a href="http://www.okfn.de/">
     						<img class="img-responsive logo-okf" src="/static/img/OKFN.png" alt="OKFN Logo"/>
     					</a>
     				</div>
-    				<div class="col-lg-3">
+    				<div class="col-md-3  col-xs-6">
     					<a href="http://bmfsfj.de/">
     						<img class="img-responsive logo-bmfsfj" src="/static/img/BMFSFJ.png" alt="BMFSFJ" />
     					</a>
     				</div>
-    				<div class="col-lg-3">
+    				<div class="col-md-3  col-xs-6">
     					<a href="https://www.demokratie-leben.de">
     						<img class="img-responsive logo-bmfsfj" src="/static/img/foerderzusatz.png" alt="Demokratie leben" />
     					</a>
     				</div>
-                    <div class="col-lg-3">
+                    <div class="col-md-3  col-xs-6">
                         <a href="https://bpb.de">
                             <img class="img-responsive logo-bmfsfj" src="/static/img/bpb.svg" alt="BPB" />
                         </a>
