--- a/_layouts/workshop-detail.html
+++ b/_layouts/workshop-detail.html
@@ -83,25 +83,40 @@
                     </div>
                 </div>
             </div>
-            {% if page.voraussetzungen.length > 0 %}
-                <div class="row">
-                    <div class="container text__black vs-background-wrap">
-                        <div class="col-md-10 col-md-offset-1 col-lg-8 col-lg-offset-2 vs-background">
-                            {% for vs in page.voraussetzungen %}
-                            <p>{{ vs.text }}</p>
-                            {% endfor %}
-                        </div>
-                    </div>
-                </div>
-            {% endif %}
                 <div class="row">
                     <div class="container text__black">
                         <div class="col-lg-8 col-lg-offset-2">
-                            {{ content }}
+                            <div class="join__statement fond_purple_gradient ">
+                                <div class="container text__white text-center">
+                                    <div class="row">
+                                        <p>
+                                            Thema: {{ page.thema }}<br>
+                                            Prinzip: {{ page.prinzip }}<br>
+                                            Dauer: {{ page.dauer }}
+                                        </p>
+                                    </div>
+                                </div>
+                            </div>
+                            {% if page.voraussetzungen.size > 0 %}
+                            <div class="join__statement fond_purple_gradient ">
+                                <div class="container text__white text-center">
+                                    <div class="row">
+                                        <p class="align-left"><span>Voraussetzungen & Vorkenntnisse:</span><br>
+                                            {% for vs in page.voraussetzungen %}
+                                            {{ vs.text }}<br>
+                                            {% endfor %}
+                                        </p>
+                                    </div>
+                                </div>
+                            </div>
+                            {% endif %}
+                            <div class="row">
+                                <div class="container">{{ content }}</div>
+                            </div>
                         </div>
                     </div>
                 </div>
-            {% if page.downloads.length > 0 %}
+            {% if page.downloads.size > 0 %}
                 <div class="row">
                     <div class="container text__black">
                         <div class="col-lg-8 col-lg-offset-2">
@@ -114,67 +129,39 @@
                 </div>
             {% endif %}
         </div>
+        <div class="row">
+            <div class="jumbotron related-workshop-background">
+                <div class="container">
+                    <h2 class="section-headline text-center text__white">Weitere Workshops</h2>
+                    <div class="isotope-wrap">
+                        <div class="grid-sizer col-xs-12 col-md-6 col-lg-4"></div>
+                        {% assign maxRelated = 3 %}
+                        {% assign maxRelatedCounter = 0 %}
+                        {% assign randomWorkshops = site.workshops | sample:4 %}
+                        {% for post in randomWorkshops %}
+                            {% if post.title != page.title %}
+                                <div class="col-xs-12 col-md-6 col-lg-4 isotope-item post-teaser">
+                                    {% include workshop-teaser-tile.html post=post %}
+                                </div>
+                                {% assign maxRelatedCounter = maxRelatedCounter | plus: 1 %}
+                                {% if maxRelatedCounter >= maxRelated %}
+                                {% break %}
+                                {% endif %}
+                            {% endif %}
+                        {% endfor %}
+                    </div>
+                </div>
+                <div class="btn-wrap">
+                    <a href="/workshops"><button  class="btn btn-start color-2">Zur Workshopübersicht</button> </a>
+                </div>
+            </div>
+        </div>
 	</div>
-
 </div>
 
-<footer>
-    <div class="jumbotron fond__white partner">
-        <div class="container">
-            <div class="row">
-                <div class="col-lg-12">
-                    <h3>Ein Projekt von</h3>
-                    <div class="col-lg-3">
-                        <a href="http://www.okfn.de/">
-                            <img class="img-responsive logo-okf" src="/static/img/OKFN.png" alt="OKFN Logo"/>
-                        </a>
-                    </div>
-                    <div class="col-lg-3">
-                        <a href="http://bmfsfj.de/">
-                            <img class="img-responsive logo-bmfsfj" src="/static/img/BMFSFJ.png" alt="BMFSFJ" />
-                        </a>
-                    </div>
-                    <div class="col-lg-3">
-                        <a href="https://www.demokratie-leben.de">
-                            <img class="img-responsive logo-bmfsfj" src="/static/img/foerderzusatz.png" alt="Demokratie leben" />
-                        </a>
-                    </div>
-                    <div class="col-lg-3">
-                        <a href="https://bpb.de">
-                            <img class="img-responsive logo-bmfsfj" src="/static/img/bpb.svg" alt="BPB" />
-                        </a>
-                    </div>
-                </div>
-            </div>
-        </div>
-    </div>
-    <div class="jumbotron fond__grey meta-links-foot">
-        <div class="container">
-            <div class="row text-uppercase">
-                <div class="col-lg-12">
-                    <a href="/impressum">Impressum</a>
-                    <a href="/presse">Presse</a>
-                </div>
-            </div>
-        </div>
-    </div>
-</footer>
+{% include footer.html %}
 
-    <script src="/static/js/vendor/modernizr-2.8.3-respond-1.4.2.min.js"></script>
-    <script src="/static/js/vendor/jquery-1.11.2.min.js"></script>
-    <script src="/static/js/vendor/imagesloaded.pkgd.min.js"></script>
-    <script src="/static/js/vendor/isotope.pkgd.min.js"></script>
-    <script src="/static/js/vendor/bootstrap.min.js"></script>
-    <script src="/static/js/vendor/logger.min.js"></script>
-    <script src="/static/js/main.js"></script>
-    <script src="/static/js/IsotopeController.js"></script>
-
-    <script>
-        jQuery(document).ready(function($) {
-            window.controller = new Controller($);
-            window.controller.init();
-        });
-    </script>
+{% include scripts.html %}
 
 {% include piwik.html %}
 </body>
