--- a/_layouts/base.html
+++ b/_layouts/base.html
@@ -45,33 +45,7 @@
             {% if page.hide_hero != true %}
                 <div class="hero-wrap"></div>
                     {% if site.data.events  %}
-                        <div class="events-wrap container">
-                            <div class="events-panel">
-                                <div class="events-panel-inner">
-                                    <h3 class="events-headline">Kommende Events</h3>
-                                    <ul class="events-list">
-                                        {% assign events = site.data.events | where: "featured","true" | sort: "date" %}
-                                        {% for event in  events %}
-                                        {% if event.url %}
-                                        <a href="{{event.url}}" target="_blank">
-                                            {% endif %}
-                                            <li class="events-item">
-
-                                                <div class="event-date">
-                                                    {{ event.date | date:"%d.%m" }}
-                                                </div>
-                                                <div class="event-info">
-                                                    {{ event.name }},<br/>{{ event.city }}
-                                                </div>
-                                            </li>
-                                            {% if event.url %}
-                                        </a>
-                                        {% endif %}
-                                        {% endfor %}
-                                    </ul>
-                                </div>
-                            </div>
-                        </div>
+                        {% include event-calendar.html %}
                     {% endif %}
                 </div>
             {% endif %}
