--- a/_layouts/workshop-detail.html
+++ b/_layouts/workshop-detail.html
@@ -45,32 +45,7 @@
             {% if page.hide_hero != true %}
                 <div class="hero-wrap" style="background-image:url({{ page.img_full }});"></div>
                 {% if site.data.events  %}
-                <div class="events-wrap container">
-                    <div class="events-panel">
-                        <div class="events-panel-inner">
-                            <h3 class="events-headline">Kommende Events</h3>
-                            <ul class="events-list">
-                                {% for event in site.data.events %}
-                                {% if event.url %}
-                                <a href="{{event.url}}" target="_blank">
-                                    {% endif %}
-                                    <li class="events-item">
-
-                                        <div class="event-date">
-                                            {{ event.date }}
-                                        </div>
-                                        <div class="event-info">
-                                            {{ event.name }},<br/>{{ event.city }}
-                                        </div>
-                                    </li>
-                                    {% if event.url %}
-                                </a>
-                                {% endif %}
-                                {% endfor %}
-                            </ul>
-                        </div>
-                    </div>
-                </div>
+                    {% include event-calendar.html %}
                 {% endif %}
             {% endif %}
         </div>
