set image size to a maximum of 100% in blogposts

--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -2,7 +2,7 @@
 layout: base
 hide_hero: true
 ---
-<div class="beneath-sections jumbotron fond__white">
+<div class="beneath-sections jumbotron fond__white post">
     <div class="row">
         <div class="col-lg-6 col-lg-offset-3 blog-main" >
 				{% include post.html %}
