--- a/_sass/_base.scss
+++ b/_sass/_base.scss
@@ -663,6 +663,10 @@ label {
   }
 }
 
+.post img {
+  max-width: 100%;
+}
+
 /*============================
 =   Home
 ============================*/
