--- a/_layouts/workshop-detail.html
+++ b/_layouts/workshop-detail.html
@@ -72,7 +72,7 @@
                                     </div>
                                 </div>
                             </div>
-                            {% if page.voraussetzungen.size > 0 %}
+                            <!--{% if page.voraussetzungen.size > 0 %}
                             <div class="join__statement fond_purple_gradient ">
                                 <div class="container text__white text-center">
                                     <div class="row">
@@ -84,7 +84,7 @@
                                     </div>
                                 </div>
                             </div>
-                            {% endif %}
+                            {% endif %}-->
                             <div class="row">
                                 <div class="container">{{ content }}</div>
                             </div>
