--- a/_includes/newsletter-form.html
+++ b/_includes/newsletter-form.html
@@ -6,26 +6,6 @@
                 Du m&ouml;chtest auf dem Laufenden bleiben? <br>
                 Dann melde Dich f&uuml;r unseren Newsletter an!
             </h3>
-            <form action="//rainbow-unicorn.us5.list-manage.com/subscribe/post?u=b837cb313a33e01747a28d942&amp;id=e560ebaf33" method="post" id="mc-embedded-subscribe-form" name="mc-embedded-subscribe-form" class="validate" target="_blank">
-                <div class="col-sm-6 col-sm-offset-1 col-md-5 col-md-offset-2 no-padding">
-                    <div class="field-wrap">
-                        <input type="email" placeholder="Deine E-Mail" name="EMAIL" id="mce-EMAIL" required>
-                    </div>
-                </div>
-                <div class="col-sm-4 col-md-3 no-padding">
-                    <div style="position: absolute; left: -5000px;" aria-hidden="true"><input type="text" name="b_f2d244c0df42a0431bd08ddea_aeaa9dd034" tabindex="-1" value=""></div>
-                    <div class="button-wrap">
-                        <input type="submit" value="Abonnieren!" name="subscribe" id="mc-embedded-subscribe" class="button">
-                    </div>
-                </div>
-            </form>
-            <div class="mc-status hidden col-md-6 col-md-offset-3"></div>
-        </div>
-    </div>
-        <script src="/static/js/modules/mailchimp-ajax.js"></script>
-</div>
-    <!--<div class="container text__white newsletter-title">
-        <div id="mc_embed_signup">
             <form action="//okfn.us5.list-manage.com/subscribe/post?u=929f1e07936386d34833e20d1&amp;id=3b8102edce" method="post" id="mc-embedded-subscribe-form" name="mc-embedded-subscribe-form" class="validate  mc-form " target="_blank" novalidate>
                 <div class="mc-field-group form-group form-group-newsletter text-left row">
                     <div class="col-sm-6 col-sm-offset-1 col-md-5 col-md-offset-2">
@@ -40,7 +20,10 @@
                     </div>
                 </div>
             </form>
+            <div class="mc-status hidden col-md-6 col-md-offset-3">
+            </div>
         </div>
-
-    </div>-->
+    </div>
+    <script src="/static/js/modules/mailchimp-ajax.js"></script>
+</div>
 
