--- a/_sass/_base.scss
+++ b/_sass/_base.scss
@@ -540,6 +540,7 @@ label {
   color: $white;
   width: 100%;
   padding: 12px;
+  @include transition(background-color .25s ease);
   &:focus{
     color: $white;
   }
@@ -1380,9 +1381,8 @@ newsletter
   input[type="email"],input[type="text"]{
     width: 100%;
     border: 0;
-    height: 66px;
     text-align: left;
-    font-size: 1.75em;
+    font-size: 1em;
     margin-bottom: 10px;
     padding-left: 20px;
     padding-top: 7px;
