--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -36,6 +36,13 @@
                     <a href="/presse">Presse</a>
                 </div>
             </div>
+            <div class="row">
+                <div class="col-lg-12">
+                    <a href="https://twitter.com/demokratielabs">Twitter, </a> 
+                    <a href="https://instagram.com/demokratielabs">Instagram, </a>
+                    <a href="https://facebook.com/demokratielabs">Facebook</a>
+                </div>
+            </div>
         </div>
     </div>
 </footer>
