--- a/static/css/main.scss
+++ b/static/css/main.scss
@@ -11,6 +11,7 @@
 @import "../_sass/post-teaser";
 @import "../_sass/scrollbars";
 @import "../_sass/mobilemenubutton";
+@import "../_sass/pagination";
 
 @media screen and (min-width: 375px) {
   @import "../_sass/375";
