--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,29 +1,27 @@
 <footer>
     <div class="jumbotron fond__white partner">
-        <div class="container">
-            <div class="row">
-                <div class="col-lg-12">
-                    <h3>Ein Projekt von</h3>
-                    <div class="col-lg-3">
-                        <a href="http://www.okfn.de/">
-                            <img class="img-responsive logo-okf" src="/static/img/OKFN.png" alt="OKFN Logo"/>
-                        </a>
-                    </div>
-                    <div class="col-lg-3">
-                        <a href="http://bmfsfj.de/">
-                            <img class="img-responsive logo-bmfsfj" src="/static/img/BMFSFJ.png" alt="BMFSFJ" />
-                        </a>
-                    </div>
-                    <div class="col-lg-3">
-                        <a href="https://www.demokratie-leben.de">
-                            <img class="img-responsive logo-bmfsfj" src="/static/img/foerderzusatz.png" alt="Demokratie leben" />
-                        </a>
-                    </div>
-                    <div class="col-lg-3">
-                        <a href="https://bpb.de">
-                            <img class="img-responsive logo-bmfsfj" src="/static/img/bpb.svg" alt="BPB" />
-                        </a>
-                    </div>
+        <div class="container justify-content-center">
+            <div class="col-lg-12">
+                <h3>Ein Projekt von</h3>
+                <div class="col-lg-3 col-md-3 col-sm-6 col-xs-12 mb-5 mt-5">
+                    <a href="http://www.okfn.de/">
+                        <img class="img-responsive logo-okf" src="/static/img/OKFN.png" alt="OKFN Logo"/>
+                    </a>
+                </div>
+                <div class="col-lg-3 col-md-3 col-sm-6 col-xs-12 mb-5 mt-5">
+                    <a href="http://bmfsfj.de/">
+                        <img class="img-responsive logo-bmfsfj" src="/static/img/BMFSFJ.jpg" alt="BMFSFJ" />
+                    </a>
+                </div>
+                <div class="col-lg-3 col-md-3 col-sm-6 col-xs-12 mb-5 mt-5">
+                    <a href="https://www.demokratie-leben.de">
+                        <img class="img-responsive logo-bmfsfj" src="/static/img/foerderzusatz.png" alt="Demokratie leben" />
+                    </a>
+                </div>
+                <div class="col-lg-3 col-md-3 col-sm-6 col-xs-12 mb-5 mt-5">
+                    <a href="https://bpb.de">
+                        <img class="img-responsive logo-bmfsfj" src="/static/img/bpb.svg" alt="BPB" />
+                    </a>
                 </div>
             </div>
         </div>
