--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -10,7 +10,7 @@
                 </div>
                 <div class="col-lg-3 col-md-3 col-sm-6 col-xs-12 mb-5 mt-5">
                     <a href="http://bmfsfj.de/">
-                        <img class="img-responsive logo-bmfsfj" src="/static/img/BMFSFJ.jpg" alt="BMFSFJ" />
+                        <img class="img-responsive logo-bmfsfj" src="/static/img/bmfsfj.jpg" alt="BMFSFJ" />
                     </a>
                 </div>
                 <div class="col-lg-3 col-md-3 col-sm-6 col-xs-12 mb-5 mt-5">
