use image subtitle

--- a/_sass/_base.scss
+++ b/_sass/_base.scss
@@ -1041,7 +1041,7 @@ $keep: 44 + 2 * 15px;
 .post-img-caption {
   display: block;
   text-align: center;
-  margin-top: -30px;
+  //margin-top: -30px;
   color: gray;
   margin-bottom: 10px;
 }
