--- a/_sass/_base.scss
+++ b/_sass/_base.scss
@@ -1624,3 +1624,34 @@ footer img {
     margin: 45px 0 0 0;
   }
 }
+
+
+.table-list {
+  margin-top: 4em;
+  @media (min-width: 600px) {
+    display: flex;
+    flex-wrap: wrap;
+  }
+  dt {
+    flex: 1 0 40%;
+  }
+  dd {
+    flex: 2 0 60%;
+    margin-bottom: 3em;
+    padding-left: 2em;
+  }
+  p {
+    margin-top: 0
+  }
+}
+
+.table-list__alternate {
+  margin-top: 1em;
+  dt {
+    flex-basis: 20%;
+  }
+  dd {
+    flex-basis: 80%;
+    margin-bottom: 1em;
+  }
+}
