--- a/_includes/newsletter-form.html
+++ b/_includes/newsletter-form.html
@@ -1,6 +1,6 @@
 <div class="row">
 
-    <div class="beneath-sections jumbotron fond_blue_gradient">
+    <div class="beneath-sections jumbotron fond_red_gradient">
         <div class="newsletter-wrap container">
             <h3 class="section-headline text-center newsletter-title">
                 Du m&ouml;chtest auf dem Laufenden bleiben? <br>
