--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -1,14 +1,59 @@
----
-layout: base
-hide_hero: true
----
-<div class="beneath-sections jumbotron fond__white post">
-    <div class="row">
-        <div class="col-lg-6 col-lg-offset-3 blog-main" >
-				{% include post.html %}
-        <div class="btn-wrap">
-            <a href="/blog" class="btn btn-start">Zurück zum Blog </a>
-        </div>
+<!DOCTYPE html>
+<html class="no-js" lang="de" >
+
+<head>
+	<meta charset="utf-8">
+	<meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
+	<title>
+		{% if page.title %}
+		{{ page.title }} | {{ site.title }}
+		{% else %}
+		{{ site.title }} ~ {{ site.description }}
+		{% endif %}
+	</title>
+
+	<meta name="description" content="{{ page.excerpt | strip_html }}">
+    <meta name="viewport" content="width=device-width, user-scalable=no">
+	{% include head-social-og.html %}
+	<link rel="stylesheet" href="/static/fonts/overpass/overpass.css">
+	<link rel="stylesheet" href="/static/css/bootstrap.css">
+	<link rel="stylesheet" href="/static/css/animate.css">
+	<link rel="stylesheet" href="/static/css/main.css?v=1.4">
+	<link rel="icon" href="/static/img/favicon.ico" type="image/x-icon" />
+
+
+</head>
+
+
+<body>
+
+<div class="body-wrap">
+	<div class="page-wrap">
+        {% include header-nav.liquid %}
+        <div class="row">
+   			<div class="beneath-sections jumbotron fond__white post">
+			    <div class="row">
+			        <div class="col-lg-6 col-lg-offset-3 blog-main" >
+							{% include post.html %}
+			        <div class="btn-wrap">
+			            <a href="/blog" class="btn btn-start">Zurück zum Blog </a>
+			        </div>
+			        </div>
+				</div>
+			</div>
         </div>
 	</div>
 </div>
+
+{% include newsletter-form.html %}
+
+{% include footer.html %}
+
+{% include scripts.html %}
+
+{% include piwik.html %}
+</body>
+
+</html>
+
+
