--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -4,17 +4,17 @@
             <div class="col-lg-12">
                 <h3>Ein Projekt von</h3>
                 <div class="col-lg-3 col-md-3 col-sm-6 col-xs-12 mb-5 mt-5">
-                    <a href="http://www.okfn.de/">
+                    <a href="https://okfn.de/">
                         <img class="img-responsive logo-okf" src="/static/img/OKFN.png" alt="OKFN Logo"/>
                     </a>
                 </div>
                 <div class="col-lg-3 col-md-3 col-sm-6 col-xs-12 mb-5 mt-5">
-                    <a href="http://bmfsfj.de/">
+                    <a href="https://bmfsfj.de/">
                         <img class="img-responsive logo-bmfsfj" src="/static/img/bmfsfj.jpg" alt="BMFSFJ" />
                     </a>
                 </div>
                 <div class="col-lg-3 col-md-3 col-sm-6 col-xs-12 mb-5 mt-5">
-                    <a href="https://www.demokratie-leben.de">
+                    <a href="https://demokratie-leben.de">
                         <img class="img-responsive logo-bmfsfj" src="/static/img/foerderzusatz.png" alt="Demokratie leben" />
                     </a>
                 </div>
@@ -27,7 +27,7 @@
         </div>
     </div>
 
-    <div class="jumbotron fond__grey meta-links-foot">
+    <div class="jumbotron fond__white meta-links-foot">
         <div class="container">
             <div class="row text-uppercase">
                 <div class="col-lg-12">
@@ -43,9 +43,9 @@
                 </div>
             </div>
         </div>
-        <div class="container">
+        <div class="container datenschutzhinweis">
             <div class="row">
-                <div class="col-lg-12">
+                <div class="col-lg-8">
                     <p>Wir nutzen statt den üblichen externen Dienstleistern die datenschutzfreundlichere Technologie von <a href="https://matomo.org">Matomo,</a>um statistische Auswertungen der Seitennutzung zu erhalten. Wenn sie dies nicht wollen, <a href="https://traffic.okfn.de/index.php?module=CoreAdminHome&amp;action=optOut&amp;language=de">klicken Sie bitte hier und entfernen Sie den Haken.</a>Näheres in <a href="/impressum/#datenschutzerklaerung">unserer Datenschutzerklärung</a>.</p>
                 </div>
             </div>
