--- a/_includes/post-teaser-tile.html
+++ b/_includes/post-teaser-tile.html
@@ -6,12 +6,10 @@
     
     {% endif %}
     <div class="post-teaser-content">
-        <h3 class="post-teaser-title" >{{ post.title }}</h3>
+        <span class="post-date">{{ post.date | date: "%d.%m.%y" }}</span>
+            <a href="{{post.url}}"><h3 class="post-teaser-title" >{{ post.title }}</h3></a>
         <div class="post-teaser-description">
-            <p>
-                {{ post.excerpt | remove: '<p>' | remove: '</p>'}}
-            </p>
-            <a class="post-teaser-read-more" href="{{post.url}}">zum ganzen Beitrag</a>
+            <a class="post-teaser-read-more" href="{{post.url}}">⟶</a>
         </div>
     </div>
 </div>
