--- a/_includes/newsletter-form.html
+++ b/_includes/newsletter-form.html
@@ -1,29 +1,25 @@
-<div class="row">
-
-    <div class="beneath-sections jumbotron fond_red_gradient">
-        <div class="newsletter-wrap container">
-            <h3 class="section-headline text-center newsletter-title">
-                Du m&ouml;chtest auf dem Laufenden bleiben? <br>
-                Dann melde Dich f&uuml;r unseren Newsletter an!
-            </h3>
-            <form action="//okfn.us5.list-manage.com/subscribe/post?u=929f1e07936386d34833e20d1&amp;id=3b8102edce" method="post" id="mc-embedded-subscribe-form" name="mc-embedded-subscribe-form" class="validate  mc-form " target="_blank" novalidate>
-                <div class="mc-field-group form-group form-group-newsletter text-left row">
-                    <div class="col-sm-6 col-sm-offset-1 col-md-5 col-md-offset-2">
-                        <label for="mce-EMAIL" class="sr-only" >E-Mail</label>
-                        <input type="email" value="" name="EMAIL" class="form-control" id="mce-EMAIL" placeholder="E-Mail" required >
-                    </div>
-                    <div class="col-sm-4 col-md-3">
-                        <button type="submit" name="subscribe" id="mc-embedded-subscribe" class="btn btn-mitmachen">Abonnieren!
-                        </button>
-                        <div style="position: absolute; left: -5000px;"><input type="text" name="b_929f1e07936386d34833e20d1_6c6b5db59f" value="">&lt;!&ndash; set to newsletter only&ndash;&gt;<input type="checkbox" value="1" checked="checked" name="group[16985][1]" id="mce-group[16985]-16985-0" style="display:none;">
-                        </div>
+<div class="jumbotron fond__white">
+    <div class="newsletter-wrap container">
+        <h3 class="section-headline newsletter-title">
+            Du m&ouml;chtest auf dem Laufenden bleiben? <br>
+            Dann melde Dich f&uuml;r unseren Newsletter an!
+        </h3>
+        <form action="//okfn.us5.list-manage.com/subscribe/post?u=929f1e07936386d34833e20d1&amp;id=3b8102edce" method="post" id="mc-embedded-subscribe-form" name="mc-embedded-subscribe-form" class="validate  mc-form " target="_blank" novalidate>
+            <div class="mc-field-group form-group form-group-newsletter text-left row">
+                <div class="col-sm-4 col-md-4">
+                    <label for="mce-EMAIL" class="sr-only" >E-Mail</label>
+                    <input type="email" value="" name="EMAIL" class="form-control" id="mce-EMAIL" placeholder="E-Mail" required >
+                </div>
+                <div class="col-sm-2 col-md-2">
+                    <button type="submit" name="subscribe" id="mc-embedded-subscribe" class="btn btn-mitmachen">Abonnieren!
+                    </button>
+                    <div style="position: absolute; left: -5000px;"><input type="text" name="b_929f1e07936386d34833e20d1_6c6b5db59f" value="">&lt;!&ndash; set to newsletter only&ndash;&gt;<input type="checkbox" value="1" checked="checked" name="group[16985][1]" id="mce-group[16985]-16985-0" style="display:none;">
                     </div>
                 </div>
-            </form>
-            <div class="mc-status hidden col-md-6 col-md-offset-3">
             </div>
-        </div>
+        </form>
+        <div class="mc-status hidden col-md-6 col-md-offset-3"></div>
     </div>
-    <script src="/static/js/modules/mailchimp-ajax.js"></script>
 </div>
+<script src="/static/js/modules/mailchimp-ajax.js"></script>
 
