--- a/static/css/main.scss
+++ b/static/css/main.scss
@@ -12,6 +12,7 @@
 @import "../_sass/scrollbars";
 @import "../_sass/mobilemenubutton";
 @import "../_sass/pagination";
+@import "../_sass/filter-items";
 
 @media screen and (min-width: 375px) {
   @import "../_sass/375";
